--- a/src/weatherInfo.css
+++ b/src/weatherInfo.css
@@ -6,7 +6,8 @@ body {
 
 .container {
     margin: 50px auto;
-    width: 100%;
+    width: 80vw;
+    height: 70vh;
     padding: 20px;
     background-color: #c9e6ec;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -54,9 +55,11 @@ button:hover {
 }
 
 .weather-card p{
-border: 1px solid #555;
+border: 1px transparent #555;
 border-radius: 5px;
 padding: 10px;
+height: 60px;
+align-content: center;
 background-color: #f0f0f0;
 margin: 10px;
 }
